@@ -1,3 +1,8 @@
+Thu Aug 20 20:59:22 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
+	* src/odbc/convert_tds2sql.c src/odbc/unittests/data.c:
+	* src/tds/token.c:
+	- fix N(VAR)CHAR inside variant
+
 Thu Aug 20 19:52:58 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
 	* include/tds.h src/tds/iconv.c src/tds/token.c:
 	- pass raw collation structure to tds_iconv_from_collate
@@ -1765,4 +1770,4 @@ Wed Jan  9 19:54:43 EST 2008	JK Lowden <jklowden@freetds.org>
 	* ChangeLog-0.82 added because of release
 	
 $FreeTDS$
-$Id: ChangeLog,v 1.2852 2009/08/20 17:53:06 freddy77 Exp $
+$Id: ChangeLog,v 1.2853 2009/08/20 18:59:29 freddy77 Exp $
